# learnloop

./: .gitmodules  CLAUDE.md  DEVPOST.md  README.md  example-client.py  test_agents_client.py  test_dom_direct.py  test_dom_sse.py  test_mcp_client.py  test_mcp_simple.py
backend/: .env.example  README.md  database.sql  main.py  pyproject.toml  topic_news_agent.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AddTopicModal.tsx  AuthComponent.tsx  AuthProvider.tsx  ContextMenu.tsx  InterestInput.tsx  LearningGraph.tsx  NewsModal.tsx  NotesModal.tsx  VoiceConversation.tsx
frontend/lib/: api.ts
